--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
 name = "speedtest-exporter"
 version = "0.1.0"
-description = "Add your description here"
+description = "Yet another Speedtest.net exporter for Prometheus"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
     "gunicorn>=23.0.0",
-    "prometheus-client>=0.22.1",
     "ruff>=0.12.12",
 ]
